# adk-python

contributing/samples/monitor_processual/: .env.example  agent.py  classificacao.py  main.py  prazos.py  processos.json  pyproject.toml  settings.py  tools.py
